tests/ui/suggestions/issue-102892.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102892.rs:15:26
   |
LL |     let (a, b): (A, B) = &**arc; // suggests putting `&**arc` here too
   |                 ------   ^^^^^^ expected `(A, B)`, found `&(A, B)`
   |                 |
   |                 expected due to this
   |
   = note:  expected tuple `(A, B)`
           found reference `&(A, B)`
help: consider removing the borrow
   |
LL -     let (a, b): (A, B) = &**arc; // suggests putting `&**arc` here too
LL +     let (a, b): (A, B) = **arc; // suggests putting `&**arc` here too
   |
help: alternatively, consider changing the type annotation
   |
LL |     let (a, b): &(A, B) = &**arc; // suggests putting `&**arc` here too
   |                 +

error[E0308]: mismatched types
  --> $DIR/issue-102892.rs:20:32
   |
LL |     let (a, b): ((A, B), A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
   |                                ^^^^^^^^^^^^^^ expected `(A, B)`, found `&mut (A, B)`
   |
   = note:          expected tuple `(A, B)`
           found mutable reference `&mut (A, B)`
help: consider removing the borrow
   |
LL -     let (a, b): ((A, B), A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
LL +     let (a, b): ((A, B), A) = (*mutation, &(**arc).0); // suggests putting `&**arc` here too
   |
help: alternatively, consider changing the type annotation
   |
LL |     let (a, b): (&mut (A, B), A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
   |                  ++++

error[E0308]: mismatched types
  --> $DIR/issue-102892.rs:20:48
   |
LL |     let (a, b): ((A, B), A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
   |                                                ^^^^^^^^^^ expected `A`, found `&A`
   |
help: consider removing the borrow
   |
LL -     let (a, b): ((A, B), A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
LL +     let (a, b): ((A, B), A) = (&mut *mutation, (**arc).0); // suggests putting `&**arc` here too
   |
help: alternatively, consider changing the type annotation
   |
LL |     let (a, b): ((A, B), &A) = (&mut *mutation, &(**arc).0); // suggests putting `&**arc` here too
   |                          +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
